translated FMG directory structure

--- a/README
+++ b/README
@@ -1,3 +1,48 @@
 data - Game data in plain-text
 
 Extracted *bnd and param files will be put here.
+
+Translated fmg directory structure:
+	item/
+		NPC名.txt (NPC name)
+		アイテムうんちく.txt (Item phony)
+		アイテム名.txt (Item name)
+		アイテム説明.txt (Item description)
+		アクセサリうんちく.txt (Accessory phony)
+		アクセサリ名.txt (Accessory name)
+		アクセサリ説明.txt (Accessory description)
+		地名.txt (Place name)
+		武器うんちく.txt (Weapon phony)
+		武器名.txt (Weapon name)
+		武器説明.txt (Weapon explanation)
+		防具うんちく.txt (Armor phony)
+		防具名.txt (Armor name)
+		防具説明.txt (Armor description)
+		魔法うんちく.txt (Magic phony)
+		魔法名.txt (Magic name)
+		魔法説明.txt (Magic description)
+	menu/
+		SP_キーガイド.txt (SP_Key guide)
+		SP_システムメッセージ_win64.txt (SP_System message_win64)
+		SP_ダイアログ.txt (SP_Dialog)
+		SP_メニューテキスト.txt (SP_Menu text)
+		SP_一行ヘルプ.txt (SP_One-line help)
+		イベントテキスト.txt (Event text)
+		インゲームメニュー.txt (In game menu)
+		キーガイド.txt (Key guide)
+		システムメッセージ_win64.txt (System message_win64)
+		ダイアログ.txt (Dialog)
+		テキスト表示用タグ一覧.txt (Text display tag list)
+		ムービー字幕.txt (Movie subtitles)
+		メニューその他.txt (Menu other)
+		メニュー共通テキスト.txt (Common menu)
+		一行ヘルプ.txt (One-line help)
+		会話.txt (Conversation)
+		機種別タグ_win64.txt (Tags by model_win64)
+		死因.txt (Cause of death)
+		血文字.txt (Blood text)
+		魔石うんちく.txt (Magic stone phony)
+		魔石効果.txt (Magic stone effect)
+		魔石名.txt (Magic stone name)
+		魔石接頭語.txt (Magic stone prefix)
+		魔石説明.txt (Magic stone description)
